Wizard should reject empty filename
The stream output wizards should not allow OK when an output file name is not specified. This fails in confusing manner.
See also https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=735517
The stream output wizards should not allow OK when an output file name is not specified. This fails in confusing manner.
See also https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=735517
added Component::Interface: Qt Severity::normal Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
commit 64c4b59c Author: Francois Cartegnie fcvlcdev@free.fr Date: Fri Apr 4 08:14:05 2014 +0200
Qt: don't allow empty file on convert dialog (fix [#11072](https://code.videolan.org/videolan/vlc/-/issues/11072))
added Status::fixed label
closed
changed milestone to %2.2.0
VideoLAN code repository instance