Qt: don't allow empty file on convert dialog (fix #11072)